--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Bağlantılarım</title>
+<title>Reach Out</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
   body {
@@ -15,48 +15,70 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     color: #fff;
     text-align: center;
   }
 
   .logo {
     width: 120px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     border-radius: 15px;
     box-shadow: 0 4px 15px rgba(0,0,0,0.2);
   }
 
-  h1 { margin-bottom: 40px; }
+  h1 { margin-bottom: 20px; font-size: 2.2rem; }
 
-  a {
-    display: block;
-    width: 220px;
-    margin: 10px auto;
-    padding: 15px 0;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 30px;
-    font-weight: bold;
-    transition: 0.3s;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+  .social-icons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 30px;
   }
 
-  .youtube { background: #ff0000; }
-  .youtube:hover { background: #cc0000; transform: scale(1.05); }
+  .social-icons a img {
+    width: 70px;
+    height: 70px;
+    transition: transform 0.3s;
+  }
 
-  .twitter { background: #1da1f2; }
-  .twitter:hover { background: #0d95e8; transform: scale(1.05); }
+  .social-icons a img:hover {
+    transform: scale(1.1);
+  }
 
-  .linkedin { background: #0077b5; }
-  .linkedin:hover { background: #005582; transform: scale(1.05); }
+  /* Contact button */
+  .contact-btn {
+    padding: 15px 25px;
+    background: rgba(255,255,255,0.2);
+    color: #fff;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.3s;
+    text-decoration: none;
+    display: inline-block;
+  }
+
+  .contact-btn:hover {
+    background: rgba(255,255,255,0.4);
+  }
+
 </style>
 </head>
 <body>
+
   <img src="logo.png" alt="Logo" class="logo">
-  <h1>Benim Bağlantılarım</h1>
-  <a href="https://youtube.com/@CalestialKhan" class="youtube">YouTube</a>
-  <a href="https://x.com/CalestialKhan" class="twitter">Twitter / X</a>
-  <a href="https://linkedin.com/in/ulgenbilgin" class="linkedin">LinkedIn</a>
+  <h1>Reach Out</h1>
+
+  <div class="social-icons">
+    <a href="https://x.com/CalestialKhan" target="_blank"><img src="twitter.png" alt="X / Twitter"></a>
+    <a href="https://youtube.com/@CalestialKhan" target="_blank"><img src="youtube.png" alt="YouTube"></a>
+    <a href="https://linkedin.com/in/ulgenbilgin" target="_blank"><img src="linkedin.png" alt="LinkedIn"></a>
+  </div>
+
+  <a class="contact-btn" href="mailto:ulgenbil@gmail.com?subject=[Enter A Subject]">Contact</a>
+
 </body>
 </html>
