--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Reach Out</title>
+<title>Ülgen</title>
+
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="favicon.png">
+
+<!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
 <style>
   body {
     margin: 0;
@@ -47,7 +53,6 @@
     transform: scale(1.1);
   }
 
-  /* Contact button */
   .contact-btn {
     padding: 15px 25px;
     background: rgba(255,255,255,0.2);
